version/0.30/_sources/api/solver/_autosummary/settings/injection_2_child.rst.txt
:orphan:

.. _injection_2_child:

injection_child
===============

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.injection_2_child
    :show-inheritance:

.. rubric:: Attributes

======================================================================   ==============================================================================

Attribute                                                                                                                                       Summary

======================================================================   ==============================================================================
:ref:`name <name_2>`                                                                                                                Name of the object.

:ref:`report_type <report_type>`                                             The report type; the list may vary on the selected report definition type.

:ref:`injection_list <injection_list>`                                                                                          'injection_list' child.

:ref:`boundaries <boundaries_1>`                                                                                                    'boundaries' child.

:ref:`physics <physics_1>`                                                                                                             'physics' child.

:ref:`per_injection <per_injection>`                                                                                             'per_injection' child.

:ref:`average_over <average_over>`                                                                                                'average_over' child.

:ref:`retain_instantaneous_values <retain_instantaneous_values>`                                                   'retain_instantaneous_values' child.

:ref:`mass_criterion <mass_criterion>`                                                                                          'mass_criterion' child.

:ref:`user_specified_origin_and_axis <user_specified_origin_and_axis>`                                          'user_specified_origin_and_axis' child.

:ref:`origin <origin_1>`                                                                                                                'origin' child.

:ref:`axis <axis>`                                                                                                                        'axis' child.

:ref:`show_unsteady_rate <show_unsteady_rate>`                                                                              'show_unsteady_rate' child.

:ref:`inj_mass_rate_prev_time <inj_mass_rate_prev_time>`                                                               'inj_mass_rate_prev_time' child.

:ref:`inj_mass_rate_prev_mass <inj_mass_rate_prev_mass>`                                                               'inj_mass_rate_prev_mass' child.

:ref:`inj_mass_rate_last_flow <inj_mass_rate_last_flow>`                                                               'inj_mass_rate_last_flow' child.

:ref:`inj_mass_rate_last_tstp <inj_mass_rate_last_tstp>`                                                               'inj_mass_rate_last_tstp' child.

:ref:`output_parameter <output_parameter_1>`                                         Option to make report definition available as an output parameter.

======================================================================   ==============================================================================

.. rubric:: Methods

========================================================   ======================================================================

Method                                                                                                                    Summary

========================================================   ======================================================================
:ref:`create_output_parameter <create_output_parameter>`       Option to make report definition available as an output parameter.

========================================================   ======================================================================

.. rubric:: Included in:

================================   =======================================================

Parent                                                                             Summary

================================   =======================================================
:ref:`injection_2 <injection_2>`       Create a new or edit an existing report definition.

================================   =======================================================

